Collapse Module Accordion fixed

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -20,6 +20,9 @@
     .collapsible{
         margin-left: 0px;
     } 
+    .gpa{
+        width: auto;
+    }
 }
 
 @media (max-width: 603px){
@@ -43,16 +46,6 @@ label{
 }
     
 }
-
-@media (max-width: 450px){
-    .panel-title a span{
-        font-size: 13px;;
-    }
-    .panel-heading{
-    height: 33px;
-}
-}
-
 @media (max-width: 360px){
 .hover-bg .hover-text {
     padding: 22% 10%;
