--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,7 @@ ul, ol{
     float: right;    
 }
 .panel-body .percent{
-    padding-right: 30px;
+    padding-right: 55px;
 }
 /* Home Style */
 #cv-home{
